# gw2-skill-sound

./: Cargo.toml  Makefile.toml  README.md  copy.sh
.github/workflows/: release.yml
src/: arcdps.rs  events.rs  lib.rs  logging.rs  mumblelink.rs  music.rs
src/exports/: combat.rs  logging.rs
src/link/: imp.rs  mod.rs  mumble.rs
