[package]
name = "gw2-skill-sound"
version = "0.0.1"
authors = ["Matt Elphick <matt.a.elphy@gmail.com>"]
edition = "2018"

[dependencies]
arcdps = "0.8.0"
smol = "0.1.10"
piper = "0.1.2"
futures = "0.3.5"
parking_lot = "0.10.2"
once_cell = "1.4.0"
log = "*"
log4rs = "*"
rodio = "*"

[dependencies.winapi]
version = "0.3.7"
features = ["ntdef", "minwindef"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true