[package]
name = "gw2-skill-sound"
version = "0.0.1"
authors = ["Matt Elphick <matt.a.elphy@gmail.com>"]
edition = "2018"

[dependencies]
arcdps = "0.8.0"
smol = "0.1.10"
piper = "0.1.2"
futures = "0.3.5"
parking_lot = "0.10.2"
once_cell = "1.4.0"
log = "*"
log4rs = "*"
rodio = "*"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
serde_json = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
libc = "0.2.23"
kernel32-sys = "0.2.2"
winapi-old = {package = "winapi", version="0.2.8"}

[dependencies.winapi]
version = "0.3.7"
features = ["ntdef", "minwindef"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true